syntax = "proto3";

// 서비스 등록
service UserService {
  rpc GetUserById(GetUserRequest) returns (GetUserResponse) {}
}

// 유저 조회 요청 메시지
message GetUserRequest {
  string id = 1;
}

// 유저 조회 응답 메시지
message GetUserResponse {
  string id = 1;
  string name = 2;
  int32 age = 3;
}

